ui: work on comments layout; various

--- a/src/ui/common/Popup.pug
+++ b/src/ui/common/Popup.pug
@@ -40,7 +40,7 @@ style.
 		border-radius 10px
 		max-height 90dvh
 		overflow auto
-		width 480px
+		width 640px
 		z-index 11
 	.popup-content-body
 		padding 1em
@@ -50,4 +50,7 @@ style.
 		justify-content space-between
 		padding 1em
 	.popup-content-title
+		font-size 18px
+		font-weight 900
 		margin 0
+		text-transform uppercase
