--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -17,9 +17,10 @@
 	--f-type-prop 'Inter', sans-serif
 	--f-type-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
 	font-family var(--f-type-prop)
+	font-feature-settings 'cv11'
 	font-size 14px
 	font-weight var(--f-wght-normal)
-	letter-spacing 0.025em
+	letter-spacing 0.02em
 	line-height 1.5
 b
 strong
@@ -74,11 +75,10 @@ ul
 	padding-inline-start 3ch
 	& ul
 		list-style-type initial
+	p + &
+		margin-top -0.25em
 li
-	margin 0 0 0.25em
-	> ol
-	> ul
-		margin 0 0 0.25em
+	margin-bottom 0.75em
 menu
 	padding 0
 
@@ -106,23 +106,25 @@ h6
 	font-size 1em
 
 // Tables
-table
-	background var(--c-con-normal)
-	border-radius 6px
-	font-family var(--f-type-mono)
-	font-size 11px
-	letter-spacing 0.5px
-	margin 0 0 1em
-	overflow-wrap normal
-	padding 1em
-	overflow auto
-th
-td
-	padding-right 10px
-	padding-top 6px
-	vertical-align top
 th
 	font-weight inherit
+.md
+	table
+		background var(--c-con-normal)
+		border-radius 6px
+		display block
+		font-family var(--f-type-mono)
+		font-size 11px
+		letter-spacing 0.5px
+		margin 0 0 1em
+		overflow-wrap normal
+		padding 1em
+		overflow auto
+	th
+	td
+		padding-right 10px
+		padding-top 6px
+		vertical-align top
 
 // Formatted text
 a
@@ -137,13 +139,13 @@ sup
 	background var(--c-tint-normal)
 	border-radius 10px
 	overflow-wrap anywhere
-	padding 10px
+	padding 1em
 	a
 		text-decoration underline
 		word-break break-all
 	a[href^='/']::before
 	a[href^='#']::before
-		background white
+		background var(--c-text-strong)
 		border-radius 50%
 		color var(--c-theme)
 		content '→'
@@ -215,7 +217,7 @@ input
 	text-transform inherit
 	user-select all
 	word-spacing inherit
-details
+summary
 	cursor pointer
 
 // Media
