--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -56,15 +56,16 @@ script.
 						Button(link='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{short_id}' text='Continue thread...')
 
 style.
+	:global(.comment-tree)
+		margin-bottom 0.5em
 	.comment
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		margin 1em 0
+		margin 0.5em 0
 		position relative
 	:global(.comment > .md)
-		margin-top 2px
-		max-width 420px
+		max-width 390px
 	:global(.comment > .md img)
 		max-height 60px
 		width auto
@@ -86,13 +87,13 @@ style.
 	.comment-replies
 		border-left 1px solid var(--c-text-faint)
 		list-style none
-		padding-left 36px
+		padding-left 41px
 	.comment-sidebar
 		align-items center
 		display flex
 		flex-flow column nowrap
 		height 100%
-		left -30px
-		padding 10px 0
+		left -32px
+		padding 11px 0
 		position absolute
 		top 0
