wiki: scroll to page fragment after load; various

--- a/src/ui/feature/subreddit/SubredditInfo.pug
+++ b/src/ui/feature/subreddit/SubredditInfo.pug
@@ -16,7 +16,8 @@ script.
 	.subreddit-info
 		{#if info.banner_background_image}
 			p
-				img.subreddit-info-banner-image(alt='' src={info.banner_background_image})
+				a(href={info.banner_background_image})
+					img.subreddit-info-banner-image(alt='' src={info.banner_background_image})
 		table.subreddit-info-stats
 			thead
 				tr
