--- a/src/ui/feature/wiki/WikiPage.pug
+++ b/src/ui/feature/wiki/WikiPage.pug
@@ -1,4 +1,5 @@
 script.
+	import { tick } from 'svelte'
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
 
@@ -16,6 +17,12 @@ script.
 	api.loadWatch(api.ID('wiki', subreddit_name, page_name, revision_id),
 		(x) ->
 			{ data: page, error, loading } = x
+			if location.hash and page
+				# a common wiki use case is to load a wiki page directly at a specific heading
+				# since the heading may not exist at the time the browser would normally do the scroll, we need to handle it
+				# it's not worth it to support this handling for other views, but this is a special case
+				await tick()
+				document.getElementById(location.hash[1..])?.scrollIntoView()
 	)
 
 svelte:head
@@ -36,10 +43,15 @@ CenterLayout
 
 style.
 	.wiki-page
+		max-width 100%
 		padding-left 240px
 		width 960px
 	.wiki-page-body
 		margin-top 3em
+	:global(.wiki-page-body > .md)
+		background none
+		font-size 16px
+		padding 0
 	.wiki-page-info
 		align-items center
 		display flex
@@ -51,14 +63,14 @@ style.
 		font-size 2em
 	:global(.wiki-page .toc)
 		font-size 12px
+		left @css{max(0px, calc(50% - 640px))}
 		line-height 1
 		max-height 100vh
 		overflow auto
 		padding 8em 0
 		position fixed
-		right calc(50% + 240px)
 		top 0
-		width 240px
+		width 300px
 		&::-webkit-scrollbar
 			display none
 	:global(.wiki-page .toc > ul)
