--- a/src/ui/common/Button.pug
+++ b/src/ui/common/Button.pug
@@ -58,8 +58,8 @@ style.
 		user-select none
 		&:hover:not(:disabled):not(.disabled)
 			background var(--c-con-normal)
-			border-color wheat
-			color wheat
+			border-color var(--c-hint-normal)
+			color var(--c-hint-normal)
 		&:disabled
 		&.disabled
 			cursor not-allowed
