--- a/src/ui/feature/post/Post.pug
+++ b/src/ui/feature/post/Post.pug
@@ -211,6 +211,7 @@ style.
 	.post-image-caption
 		color var(--c-text-weak)
 		font-size 11px
+		letter-spacing 0.04em
 		max-width 390px
 	.post-image-item
 		display flex
