--- a/src/ui/feature/subreddit/SubredditPage.pug
+++ b/src/ui/feature/subreddit/SubredditPage.pug
@@ -2,6 +2,7 @@ script.
 	import { getContext } from 'svelte'
 	import api from '../../../api/index.js'
 
+	import Button from '../../common/Button.pug'
 	import SplitLayout from '../../common/layout/SplitLayout.pug'
 	import Post from '../post/Post.pug'
 	import PostsList from '../posts/PostsList.pug'
@@ -30,7 +31,18 @@ svelte:head
 	title r/{subreddit ? subreddit.display_name : subreddit_name}
 SplitLayout
 	svelte:fragment(slot='left')
-		PostsListInfo(type='subreddit' subreddit_name={subreddit_name})
+		nav.subreddit-nav
+			PostsListInfo(type='subreddit' subreddit_name={subreddit_name})
+			{#if subreddit}
+				menu.subreddit-options
+					Button(popup={true} text='About')
+						SubredditInfo(name={subreddit_name})
+					Button(popup={true} text='Rules')
+						SubredditRules(name={subreddit_name})
+					{#if subreddit.wiki_enabled}
+						Button(link='/r/{subreddit_name}/wiki/index' text='Wiki')
+		{#if subreddit?.header_title}
+			span(style='color:var(--c-text-weak)') "{subreddit.header_title}"
 		PostsList(type='subreddit' subreddit_name={subreddit_name} posts_sort={posts_sort} selected_post_short_id={post_short_id})
 	svelte:fragment(slot='right')
 		{#if post_short_id}
@@ -38,3 +50,13 @@ SplitLayout
 				Post(short_id={post_short_id} focus_comment_context_level={comment_context} focus_comment_short_id={comment_short_id} comments_sort={comments_sort})
 		{:else}
 			SubredditInfo(name={subreddit_name})
+
+style.
+	.subreddit-nav
+		display flex
+	.subreddit-options
+		align-items flex-end
+		display flex
+		flex-flow column nowrap
+		gap 3px
+		padding 20px 0
