--- a/src/ui/app/routing/AppRouter.pug
+++ b/src/ui/app/routing/AppRouter.pug
@@ -6,6 +6,7 @@ script.
 	import AppThemeColorContext from '../context/AppThemeColorContext.pug'
 
 	import CollectionPage from '../../feature/collection/CollectionPage.pug'
+	import ListingsPage from '../../feature/listings/ListingsPage.pug'
 	import MultiredditPage from '../../feature/multireddit/MultiredditPage.pug'
 	import SubredditPage from '../../feature/subreddit/SubredditPage.pug'
 	import UserPage from '../../feature/user/UserPage.pug'
@@ -23,6 +24,10 @@ script.
 	internal_navigate =
 		(link) ->
 			history.pushState(null, null, new URL(link.href))
+			set_route()
+	internal_navigate_no_history =
+		(link) ->
+			history.replaceState(null, null, new URL(link.href))
 			set_route()
 
 	is_external_new_tab_intent =
@@ -47,7 +52,10 @@ script.
 				if link and link.href
 					if is_same_origin(link)
 						if is_same_path(link) and not is_same_hash(link) then return # allow hash change scrolling behavior
-						internal_navigate(link)
+						if link.dataset.nohistory
+							internal_navigate_no_history(link)
+						else
+							internal_navigate(link)
 					else
 						if is_external_new_tab_intent(link) then external_navigate_new_tab(link)
 						else external_navigate(link)
@@ -68,7 +76,10 @@ script.
 				link = event.target
 				if is_same_origin(link)
 					if is_same_path(link) and not is_same_hash(link) then return
-					internal_navigate(link)
+					if link.dataset.nohistory
+						internal_navigate_no_history(link)
+					else
+						internal_navigate(link)
 				else
 					if is_external_new_tab_intent(link) then external_navigate_new_tab(link)
 					else external_navigate(link)
@@ -89,6 +100,8 @@ script.
 			AppNetworkStatusContext
 				{#if route.format === 'collection'}
 					CollectionPage(collection_short_id={route.listing.collection_short_id} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
+				{:else if route.format === 'listings'}
+					ListingsPage(type={route.listings_type})
 				{:else if route.format === 'multireddit'}
 					MultiredditPage(multireddit_name={route.listing.multireddit_name} user_name={route.listing.user_name} posts_sort={route.listing.posts_sort} comment_context={route.selection.comment_context} comment_short_id={route.selection.comment_short_id} comments_sort={route.selection.comments_sort} post_short_id={route.selection.post_short_id})
 				{:else if route.format === 'subreddit'}
