--- a/src/ui/feature/post/PostFlair.pug
+++ b/src/ui/feature/post/PostFlair.pug
@@ -23,6 +23,8 @@ style.
 		border-radius 10px
 		display inline-block
 		font-size 13px
+		font-weight 500
+		letter-spacing 0
 		max-width 100%
 		overflow hidden
 		padding 2px 1em
