--- a/src/ui/feature/subreddit/SubredditRules.pug
+++ b/src/ui/feature/subreddit/SubredditRules.pug
@@ -17,9 +17,9 @@ script.
 						{#if rule.description_html}
 							TextHTML(html={rule.description_html})
 						{:else}
-							p [No description provided.]
+							p [ No description provided. ]
 	{:else}
-		p This subreddit does not have any rules on record.
+		p This subreddit has no rules listed.
 
 style.
 	.subreddit-rule
