--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -35,7 +35,6 @@ strong
 	background var(--c-back-default)
 	color var(--c-text-strong)
 .color-strategy-black-text
-	--c-back-default white
 	--c-con-weak rgba(255,255,255,0.05)
 	--c-con-normal rgba(255,255,255,0.10)
 	--c-con-strong rgba(255,255,255,0.50)
@@ -46,7 +45,6 @@ strong
 	--f-wght-strong 640
 	color-scheme light
 .color-strategy-white-text
-	--c-back-default #343537
 	--c-con-weak rgba(0,0,0,0.05)
 	--c-con-normal rgba(0,0,0,0.10)
 	--c-con-strong rgba(0,0,0,0.50)
@@ -79,7 +77,7 @@ ul
 	p + &
 		margin-top -0.25em
 li
-	margin-bottom 0.75em
+	margin 0.75em 0
 menu
 	padding 0
 
