--- a/src/ui/feature/post/PostInfoCard.pug
+++ b/src/ui/feature/post/PostInfoCard.pug
@@ -19,17 +19,9 @@ script.
 	)
 
 {#if post}
-	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} href='/{post.subreddit}/{post_short_id}')
+	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} class:post-stickied={post.stickied} data-no-history={true} href='/{post.subreddit}/{post_short_id}')
 		{#if post.link_flair_text}
-			div
 			PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
-		figure.post-thumbnail
-			{#if post.media.length > 0}
-				{@const media = post.media[0]}
-					{#if media.image_url}
-						picture
-							source(srcset={media.image_url_320})
-							img.post-thumbnail-image(alt='' src={media.image_url})
 		section
 			div(style='display:none')
 				PostScore(awards={post.all_awardings} controversiality={post.upvote_ratio > 0.33 && post.upvote_ratio < 0.67 ? 1 : 0} upload_vote={(vote) => api.submit(api.ID('post_vote', post_short_id), { numerical_vote: vote })} value={!post.hide_score && post.score} vote={post.likes == null ? 0 : post.likes ? 1 : -1})
@@ -60,17 +52,13 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 6px
-	.post-thumbnail-image
-		aspect-ratio 1
-		border-radius 6px
-		object-fit cover
 	.post-info-card
+		align-items flex-start
 		background var(--c-tint-normal)
 		border-radius 10px
-		display grid
-		grid-template-columns 80px 1fr
-		gap 10px 20px
-		justify-items flex-start
+		display flex
+		flex-flow column nowrap
+		gap 10px
 		padding 20px
 		width 360px
 		&:hover
@@ -94,5 +82,3 @@ style.
 		letter-spacing 0
 		line-height 1.25
 		overflow-wrap anywhere
-	:global(.post-read .post-title)
-		text-decoration line-through
