--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -78,6 +78,8 @@ ul
 		margin-top -0.25em
 li
 	margin 0.75em 0
+	&:first-child
+		margin-top 0
 menu
 	padding 0
 
@@ -88,17 +90,20 @@ h3
 h4
 h5
 h6
-	font-weight inherit
+	font-weight 900
+	letter-spacing 0
 	line-height 1.25
 	margin 1.5em 0 0.75em
 	&:first-child
 		margin-top 0
 h1
-	font-size 1.5em
+	font-size 2em
 h2
-	font-size 1.35em
+	border-bottom 2px solid
+	font-size 1.17em
 h3
-	font-size 1.2em
+	border-bottom 1px solid
+	font-size 1em
 h4
 h5
 h6
