--- a/src/ui/common/Date.pug
+++ b/src/ui/common/Date.pug
@@ -1,7 +1,11 @@
 script.
 	import { Time } from '../../lib/index.js'
 
-	export unix_s = null
+	export created_s = null
+	export edited_s = null
 	export format = 'relabs'
 
-time.date(datetime={unix_s} title='{Time.sToAbsTimeStr(unix_s)}') {format === 'rel' ? Time.sToRelTimeStr(unix_s) + ' ago' : Time.sToAbsRelTimeStr(unix_s)}
+{#if edited_s}
+	time(datetime={edited_s} title='{Time.sToAbsTimeStr(created_s)} (edited {Time.sToAbsTimeStr(edited_s)})') {format === 'rel' ? Time.sToRelTimeStr(edited_s) + ' ago' : format === 'abs' ? Time.sToAbsTimeStr(edited_s) : Time.sToAbsRelTimeStr(edited_s)}
+{:else}
+	time(datetime={created_s} title='{Time.sToAbsTimeStr(created_s)}') {format === 'rel' ? Time.sToRelTimeStr(created_s) + ' ago' : format === 'abs' ? Time.sToAbsTimeStr(created_s) : Time.sToAbsRelTimeStr(created_s)}
