--- a/src/ui/feature/post/PostInfoCard.pug
+++ b/src/ui/feature/post/PostInfoCard.pug
@@ -1,10 +1,11 @@
 script.
 	import api from '../../../api/index.js'
+
+	import Date from '../../common/Date.pug'
 	
 	import UserAvatar from '../user/UserAvatar.pug'
 	import UserDistinguish from '../user/UserDistinguish.pug'
 	
-	import PostAge from './PostAge.pug'
 	import PostFlair from './PostFlair.pug'
 	import PostScore from './PostScore.pug'
 	import PostTag from './PostTag.pug'
@@ -19,7 +20,7 @@ script.
 	)
 
 {#if post}
-	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} class:post-stickied={post.stickied} data-no-history={true} href='/{post.subreddit}/{post_short_id}')
+	a.post-info-card(class:post-read={localStorage['visited.' + post_short_id] || false} class:post-stickied={post.stickied} data-nohistory={true} href='/{post.subreddit}/{post_short_id}')
 		{#if post.link_flair_text}
 			PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} text={post.link_flair_text})
 		section
@@ -44,7 +45,7 @@ script.
 					UserAvatar(name={post.author})
 					{#if post.distinguished}
 						UserDistinguish(type={post.distinguished})
-					PostAge(created={post.created_utc} edited={post.edited} size='medium')
+					Date(created_s={post.created_utc} edited_s={post.edited} format='rel')
 
 style.
 	section
@@ -60,7 +61,6 @@ style.
 		flex-flow column nowrap
 		gap 10px
 		padding 20px
-		width 360px
 		&:hover
 			background var(--c-con-normal)
 	.post-metadata
@@ -82,3 +82,5 @@ style.
 		letter-spacing 0
 		line-height 1.25
 		overflow-wrap anywhere
+	:global(.post-read .post-title)
+		font-weight normal
