--- a/src/ui/feature/subreddit/SubredditInfo.pug
+++ b/src/ui/feature/subreddit/SubredditInfo.pug
@@ -26,7 +26,7 @@ script.
 			tbody
 				tr
 					td.subreddit-info-stats-value(align='left')
-						Date(unix_s={info.created_utc})
+						Date(created_s={info.created_utc})
 					td.subreddit-info-stats-value(align='right') {info.subscribers.toLocaleString('en-US')}
 		{#if info.public_description_html}
 			TextHTML(html={info.public_description_html})
