subreddit: refactor layout numbers

--- a/src/ui/feature/subreddit/SubredditPage.pug
+++ b/src/ui/feature/subreddit/SubredditPage.pug
@@ -55,11 +55,10 @@ CenterLayout
 
 style.
 	.subreddit
-		align-self flex-start
-		margin-left calc(33% + 108px)
+		margin-left 156px
 		width 560px
 	.subreddit-nav
-		left 33%
+		left calc(50% - 326px)
 		position fixed
 	.subreddit-options
 		align-items flex-end
